<resources>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="X8_1280x720_200P">1280x720 200P 16:9</string>
    <string name="X8_1920x1080_100P">1920x1080 100P 16:9</string>
    <string name="X8_1920x1080_24P">1920x1080 24P 16:9</string>
    <string name="X8_1920x1080_30P">1920x1080 30P 16:9</string>
    <string name="X8_1920x1080_60P">1920x1080 60P 16:9</string>
    <string name="app_name">Mi8Test</string>
    <string name="app_product_name">FIMI Navi</string>
    <string name="app_version">1.0.20.20302</string>
    <string name="audio_title">Audio</string>
    <string name="camera_sd_format">Format SD Card</string>
    <string name="device_slogn">Totally evolved</string>
    <string name="gaode_maps_key">49df229af3cf989a82112b9015f587b9</string>
    <string name="google_maps_key">AIzaSyDlJUirgTEoUOIf9Buqj7YL5gh-zZXtDwo</string>
    <string name="grid_lines">Grid Line</string>
    <string name="grid_lines_others">Others</string>
    <string name="height_tip">Flight altitude should be over 5m</string>
    <string name="image_format">Photo Format</string>
    <string name="image_jpg">JPG</string>
    <string name="image_raw">JPG+RAW (Save JPG only in capture )</string>
    <string name="media_setting_standard">Resolution</string>
    <string name="media_setting_standard_ntsc">NTSC</string>
    <string name="media_setting_standard_pal">PAL</string>
    <string name="option_photo_12M_4k">4 : 3 | 12-megapixel | Default</string>
    <string name="option_photo_8M_4k">16 : 9 | 8-megapixel</string>
    <string name="option_video_1080_30f">1920x1080 | 30fps | Default</string>
    <string name="option_video_1080p_100_4k">1920x1080 | 100fps</string>
    <string name="option_video_1080p_30_4k">1920x1080 | 30fps</string>
    <string name="option_video_1080p_60">1920x1080 | 60fps</string>
    <string name="option_video_1080p_60_4k">1920x1080 | 60fps</string>
    <string name="option_video_1440p_60_4k">2560x1440 | 30fps</string>
    <string name="option_video_2160p_24_4k">3840x2160 | 24fps</string>
    <string name="option_video_2160p_30_4k">3840x2160 | 30fps</string>
    <string name="option_video_720p_30_4k">1280x720 | 200fps</string>
    <string name="photo">Photo</string>
    <string name="photograph">photograph</string>
    <string name="record_title">Video</string>
    <string name="sdcard_operation">SD Card</string>
    <string name="set_fail_no_connect_camera">Setting failed for disconnecting the camera</string>
    <string name="str_main_connect_device">Enter Device</string>
    <string name="vedio_recording_audio">Record audio in video</string>
    <string name="x8_2560x1440_24P">2560x1440 24P 16:9</string>
    <string name="x8_2560x1440_30P">2560x1440 30P 16:9</string>
    <string name="x8_2560x1440_60P">2560x1440 60P 16:9</string>
    <string name="x8_3840x2160_24P">3840x2160 24P 16:9</string>
    <string name="x8_3840x2160_30P">3840x2160 30P 16:9</string>
    <string name="x8_AcceL">Accelerometer1</string>
    <string name="x8_AcceL_2">Accelerometer2</string>
    <string name="x8_MagX">Compass1</string>
    <string name="x8_MagX_2">Compass2</string>
    <string name="x8_accurate_check_obj0">Landing pad not detected</string>
    <string name="x8_accurate_check_obj1">Landing pad detected</string>
    <string name="x8_ai_aerail_graph_complete">Cinematic mission completed</string>
    <string name="x8_ai_aerail_graph_exite_tip">Are you sure to exit Cinematic mode?</string>
    <string name="x8_ai_aerail_graph_next_tip1">*The lower brake sensitivity is, the longer distance it will be</string>
    <string name="x8_ai_aerail_graph_next_tip2">*The lower yaw sensitivity is, the slower speed it will be</string>
    <string name="x8_ai_aerail_graph_next_title">Aerial attribute</string>
    <string name="x8_ai_aerial_photograph">Cinematic Mode</string>
    <string name="x8_ai_aerial_photograph_tip1">1. The brake distance will be lengthened and the angular speed of rotation will be limited to make sure the shooting videos are more stable and smooth</string>
    <string name="x8_ai_auto_photo_compelete_tip">Dronie mission completed</string>
    <string name="x8_ai_auto_photo_exite">The drone will exit Dronie, are you sure to exit?</string>
    <string name="x8_ai_auto_photo_tip1">1. Control the gimbal camera to make sure the target is in center of view, the drone will fly backward and upward with the camera locking at the subject to shoot a video in the meantime</string>
    <string name="x8_ai_auto_photo_tip2">2. Please fly in an open area and keep away from people and buildings</string>
    <string name="x8_ai_auto_photo_tip3">Choose the subject and adjust the angle of gimbal, the drone will adjust \n its location automatically to ensure the target is in center of view</string>
    <string name="x8_ai_auto_photo_tip4">The current angle of gimbal is %s°, The drone will adjust its location automatically to ensure the target is in the center of view, and fly backward at a default speed</string>
    <string name="x8_ai_auto_photo_tip5">Please drag a rectangle around the shooting target</string>
    <string name="x8_ai_auto_photo_title">Invert</string>
    <string name="x8_ai_auto_photo_vertical_loading_tip">Adjusting angle of gimbal</string>
    <string name="x8_ai_auto_photo_vertical_next_tip1">The drone will fly upward with the camera pointing downward at a default speed to shoot a video in the meantime</string>
    <string name="x8_ai_auto_photo_vertical_next_tip2">Auto Return</string>
    <string name="x8_ai_auto_photo_vertical_tip1">1. Select the shooting target, the aircraft will automatically adjust and fly high to shoot a video in the meantime</string>
    <string name="x8_ai_auto_photo_vertical_tip2">2. Please fly in an open area and keep away from people and buildings</string>
    <string name="x8_ai_auto_photo_vertical_title">Rocket</string>
    <string name="x8_ai_done">%1$s has done</string>
    <string name="x8_ai_fixed_wing">Fixed-wing</string>
    <string name="x8_ai_fixed_wing_tip1">1.The drone will switch to Fix-wing mode automatically when flight speed is up to %s and flight height up to %s for 3s</string>
    <string name="x8_ai_fixed_wing_tip2">2. Please keep away from people and buildings</string>
    <string name="x8_ai_fixedwing_complete">Fix-wing mission completed</string>
    <string name="x8_ai_fixedwing_exite_tip">Are you sure to exit Fix-wing mode?</string>
    <string name="x8_ai_fixedwing_exite_title">Exit</string>
    <string name="x8_ai_fixedwing_speed_tip1">Control the flight speed up to %s and above, \n height up to %s and above</string>
    <string name="x8_ai_fixedwing_speed_tip2">The drone will enter Fix-wing mode</string>
    <string name="x8_ai_fixedwing_speed_tip3">Tap the exit button or short press the RC Auto \n Take-off/Auto-land button to exit Fix-wing mode</string>
    <string name="x8_ai_fly_auto_photo">Dronie</string>
    <string name="x8_ai_fly_bind_interest_toast">Please bind waypoint for POI</string>
    <string name="x8_ai_fly_disconnect_return_home">Failsafe Return</string>
    <string name="x8_ai_fly_disconnect_return_home_complete">Failsafe Return completed</string>
    <string name="x8_ai_fly_follow">Smart Track</string>
    <string name="x8_ai_fly_follow_exit_msg">The drone will exit Smart Track, are you sure to exit?</string>
    <string name="x8_ai_fly_follow_go">GO</string>
    <string name="x8_ai_fly_follow_lockup">Lock</string>
    <string name="x8_ai_fly_follow_lockup_tip">Please drag a rectangle to the target,the camera will follow your target from a fixed perspective and speed</string>
    <string name="x8_ai_fly_follow_lockup_tip1">1. Drag a rectangle around the subject, camera will follow your target from a fixed perspective and speed</string>
    <string name="x8_ai_fly_follow_normal">Trace</string>
    <string name="x8_ai_fly_follow_normal_tip">Please drag a rectangle to the target</string>
    <string name="x8_ai_fly_follow_normal_tip1">1. Drag a rectangle around the subject, the drone will trace your target from different view</string>
    <string name="x8_ai_fly_follow_normal_tip2">2. Please fly in an open area and keep away from people and buildings</string>
    <string name="x8_ai_fly_follow_ok">OK</string>
    <string name="x8_ai_fly_follow_parallel">Profile</string>
    <string name="x8_ai_fly_follow_parallel_tip">Please drag a rectangle to the target,the drone will trace the target in a parallel perspective</string>
    <string name="x8_ai_fly_follow_parallel_tip1">1. Drag a rectangle around the subject, the drone will trace your target from a parallel perspective</string>
    <string name="x8_ai_fly_follow_point_to_point_complete">Tap-fly mission completed</string>
    <string name="x8_ai_fly_follow_point_to_point_far">The target distance is limited to %s!</string>
    <string name="x8_ai_fly_follow_point_to_point_far1">The target distance should be greater than %s!</string>
    <string name="x8_ai_fly_follow_point_to_point_select">Please tap map to choose a target first</string>
    <string name="x8_ai_fly_follow_point_to_point_tip1">1. Tap map to choose a target, the drone will fly over there at a default speed in a straight line</string>
    <string name="x8_ai_fly_follow_point_to_point_tip2">2. If set point of interest, the heading will be locked at the POI</string>
    <string name="x8_ai_fly_follow_point_to_point_tip3">3.Keep away from people and buildings</string>
    <string name="x8_ai_fly_follow_point_to_point_tip4">Flight Distance</string>
    <string name="x8_ai_fly_follow_point_to_point_tip5">ET</string>
    <string name="x8_ai_fly_follow_point_to_point_tip6">Flight Speed</string>
    <string name="x8_ai_fly_follow_select_point">Tap map to choose the destination</string>
    <string name="x8_ai_fly_follow_surround_compelete_tip">Orbit mission completed</string>
    <string name="x8_ai_fly_follow_surround_mext">Next step</string>
    <string name="x8_ai_fly_follow_surround_orientation">Heading</string>
    <string name="x8_ai_fly_follow_surround_orientation1">Free</string>
    <string name="x8_ai_fly_follow_surround_orientation2">Center</string>
    <string name="x8_ai_fly_line_history_item1">Y.M.D</string>
    <string name="x8_ai_fly_line_history_item2">Time</string>
    <string name="x8_ai_fly_line_history_item3">Distance</string>
    <string name="x8_ai_fly_line_history_tip">Only save the latest 5 routes</string>
    <string name="x8_ai_fly_line_history_title">Latest Waypoint Routes</string>
    <string name="x8_rc_reset_params">Reset RC Para</string>
    <string name="x8_rc_setting_america_rocker">Mode 2</string>
    <string name="x8_rc_setting_back_center_down">Back/Down</string>
    <string name="x8_rc_setting_battery_frame">Battery</string>
    <string name="x8_rc_setting_calibration">Calibration</string>
    <string name="x8_rc_setting_code">Pairing</string>
    <string name="x8_rc_setting_five_key_center">Five-Directional Button Customization· Center</string>
    <string name="x8_rc_setting_five_key_down">Five-Directional Button Customization· Down</string>
    <string name="x8_rc_setting_five_key_left">Five-Directional Button Customization· Left</string>
    <string name="x8_rc_setting_five_key_right">Five-Directional Button Customization· Right</string>
    <string name="x8_rc_setting_five_key_up">Five-Directional Button Customization· Up</string>
    <string name="x8_rc_setting_map_fpv">Map/FPV</string>
    <string name="x8_rc_setting_media_frame">Media</string>
    <string name="x8_rc_setting_rc_ap_mode">AP Mode(Please follow local laws for operation)</string>
    <string name="x8_rc_setting_rc_calibration">RC Calibration</string>
    <string name="x8_rc_setting_rc_code">RC Pairing</string>
    <string name="x8_rc_setting_rocker_mode">Stick Mode</string>
    <string name="x8_rc_setting_self_check_frame">Self-check</string>
</resources>