<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/x8_ai_point_to_point_confirm_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentRight="true"
    android:clickable="true">

    <com.fimi.kernel.percent.PercentRelativeLayout
        android:id="@+id/rl_ai_follow_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="11%">

        <ImageView
            android:id="@+id/img_ai_follow_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/x8_img_return"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_ai_follow_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/x8_ai_fly_line_history_title"
            android:textColor="@color/white_90"
            android:textSize="@dimen/textsize_45" />
    </com.fimi.kernel.percent.PercentRelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x8s_ai_line_history_layout_x1"
        android:background="@color/white_10"
        app:layout_marginTopPercent="11.11111%" />

    <LinearLayout
        android:id="@+id/ll_item"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x8s_ai_line_history_layout_x4"
        android:orientation="horizontal"
        app:layout_marginTopPercent="11.11111%">

        <TextView
            android:id="@+id/tvItme1"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_ai_take_land_off"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/x8_ai_fly_line_history_item1"
            android:textColor="@color/white_90"
            android:textSize="@dimen/textsize_39" />

        <TextView
            android:id="@+id/tvItme2"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_ai_take_land_off"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/x8_ai_fly_line_history_item2"
            android:textColor="@color/white_90"
            android:textSize="@dimen/textsize_39" />

        <TextView
            android:id="@+id/tvItme3"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_ai_take_land_off"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/x8_ai_fly_line_history_item3"
            android:textColor="@color/white_90"
            android:textSize="@dimen/textsize_39" />
    </LinearLayout>

    <View
        android:id="@+id/v_item"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x8s_ai_line_history_layout_x1"
        android:layout_below="@+id/ll_item"
        android:background="@color/white_10" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_item"
        android:divider="@color/white_10"
        android:dividerHeight="@dimen/x8s_ai_line_history_layout_x1" />

    <View
        android:id="@+id/v_item2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x8s_ai_line_history_layout_x1"
        android:layout_below="@+id/lv"
        android:background="@color/white_10" />

    <TextView
        android:id="@+id/tv_ai_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_item2"
        android:text="@string/x8_ai_fly_line_history_tip"
        android:textColor="@color/white_90"
        android:textSize="@dimen/x8s_ai_line_history_layout_x2"
        app:layout_marginLeftPercent="5.8333333%" />

    <Button
        android:id="@+id/btn_ai_follow_confirm_ok"
        android:layout_width="@dimen/x8s_ai_line_history_layout_x5"
        android:layout_height="@dimen/x8s_ai_line_history_layout_x3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/x8_btn_white_selector"
        android:text="@string/x8_ai_fly_follow_surround_mext"
        android:textColor="@color/black_90"
        android:textSize="@dimen/textsize_39"
        app:layout_marginBottomPercent="2.777777%" />
</com.fimi.kernel.percent.PercentRelativeLayout>